# vscodeconfigurator-rs

./: .gh-releasegen.json  .git-branches.toml  .gitignore  Cargo.toml  Install-VSCodeConfigurator.ps1  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.forgejo/workflows/: build.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  configurator_create-artifacts.yml
docs/: README.md
docs/cli/: Installing vscode-configurator.md  README.md  completions.md
docs/cli/csharp/: README.md  add.md  init.md
docs/cli/rust/: README.md  add.md  init.md
tools/: Build-Package.ps1  Clean-Package.ps1  Compile-VSCodeConfigurator.ps1  Update-PackageVersion.ps1
vscodeconfigurator/: Cargo.toml  build.rs
vscodeconfigurator-lib/: Cargo.toml
vscodeconfigurator-lib/src/: console_utils.rs  error.rs  io.rs  lib.rs  logging.rs  utils.rs
vscodeconfigurator-lib/src/external_procs/: cargo.rs  dotnet.rs  git.rs  mod.rs
vscodeconfigurator-lib/src/lang_options/: csharp.rs  mod.rs  rust.rs
vscodeconfigurator-lib/src/template_ops/: csharp.rs  mod.rs  rust.rs  vscode.rs
vscodeconfigurator-lib/src/vscode_ops/: csharp.rs  mod.rs  rust.rs
vscodeconfigurator/src/: console_utils.rs  error.rs  io.rs  main.rs  subcommands.rs  utils.rs
vscodeconfigurator/src/external_procs/: cargo.rs  dotnet.rs  git.rs  mod.rs
vscodeconfigurator/src/subcommands/: csharp.rs  mod.rs
vscodeconfigurator/src/subcommands/csharp/: add.rs  init.rs  mod.rs
vscodeconfigurator/src/subcommands/rust/: add.rs  init.rs  mod.rs
vscodeconfigurator/src/template_ops/: csharp.rs  mod.rs  rust.rs  vscode.rs
vscodeconfigurator/src/templates/csharp/VSCode/: settings.json  tasks.json
vscodeconfigurator/src/templates/pwsh/Git/: gitignore
vscodeconfigurator/src/templates/pwsh/ModuleTemplate/: Module.psd1  Module.psm1
vscodeconfigurator/src/templates/rust/Cargo/: Cargo.workspace.toml
vscodeconfigurator/src/templates/rust/Git/: gitignore
vscodeconfigurator/src/templates/rust/Tools/: Build-Package.ps1  Clean-Package.ps1
vscodeconfigurator/src/templates/rust/VSCode/: settings.json  tasks.json
vscodeconfigurator/src/vscode_ops/: csharp.rs  mod.rs  rust.rs
