[workspace]
members = ["vscodeconfigurator"]
resolver = "2"

package.authors = [
    "Tim Small"
]
package.license = "MIT"
package.license-file = "LICENSE"
package.homepage = "https://github.com/Smalls1652/vscodeconfigurator-rs"
package.repository = "https://github.com/Smalls1652/vscodeconfigurator-rs"

