[package]
name = "vscodeconfigurator-lib"
description = "Library for vscodeconfigurator."
version = "2.0.0-preview-04"
edition = "2021"

authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
crossterm = { version = "0.28.1", features = ["events"] }
