[package]
name = "vscodeconfigurator-lib"
description = "Library for vscodeconfigurator."
version = "2.0.0-preview-04"
edition = "2021"

authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive", "string", "cargo"] }
crossterm = { version = "0.28.1", features = ["events"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
