[package]
name = "vscodeconfigurator"
description = "Quickly bootstrap and manage projects for VSCode."
version = "2.0.0-preview-01"
edition = "2021"

homepage.workspace = true
repository.workspace = true
license-file.workspace = true

include = [
    "src/**/*",
    "Cargo.toml"
]

build = "build.rs"

[dependencies]
clap = { version = "4.5.19", features = ["derive", "string", "cargo"] }
clap_complete = "4.5.29"
crossterm = { version = "0.28.1", features = ["events"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }

[build-dependencies]
git-version = "0.3.9"
toml_edit = "0.22.22"
