[package]
name = "vscodeconfigurator"
description = "Quickly bootstrap and manage projects for VSCode."
version = "2.0.0"
edition = "2021"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

include = [
    "src/**/*",
    "Cargo.toml"
]

build = "build.rs"

[[bin]]
name = "vscode-configurator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.24", features = ["derive", "string", "cargo"] }
clap_complete = "4.5.41"
crossterm = { version = "0.28.1", features = ["events"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
vscodeconfigurator-lib = { path = "../vscodeconfigurator-lib" }

[build-dependencies]
git-version = "0.3.9"
toml_edit = "0.22.22"
